--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,12 @@
     "start": "nodemon server.js -L"
   },
   "dependencies": {
-    "express": "^4.19.1",
+    "body-parser": "^1.20.3",
+    "express": "^4.17.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1",
     "mysql2": "^3.9.4",
     "nodemon": "^3.1.0"
   }
